# GPT6.0

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/data/: dataset.py  tokenizer.py
src/gpt6.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: bigram.py  block.py  feedforward.py  gpt.py  head.py  multi_head_attention.py  normalization.py  self_attention.py
src/train/: evaluate.py  trainer.py
